kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ftex
  labels:
    app.kubernetes.io/name: ftex
    app.kubernetes.io/part-of: decision-intelligence-platform
